--- a/src/html/partials/contacts.html
+++ b/src/html/partials/contacts.html
@@ -5,60 +5,8 @@
                 <h2 class="contacts__title">Контакты</h2>
                 <p class="contacts__subtitle">Свяжитесь с нами удобным способом</p>
                 <div class="contacts__content">
-                    <div class="contacts__info">
-                        <div class="contacts__item">
-                            <div class="contacts__item-icon">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M22 16.92V19.92C22 20.52 21.52 21 20.92 21C9.4 21 0 11.6 0 0.08C0 -0.52 0.48 -1 1.08 -1H4.08C4.68 -1 5.16 -0.52 5.16 0.08C5.16 1.08 5.36 2.04 5.72 2.92C5.88 3.32 5.84 3.8 5.6 4.16L3.88 6.88C4.6 9.24 6.76 11.4 9.12 12.12L11.84 10.4C12.2 10.16 12.68 10.12 13.08 10.28C13.96 10.64 14.92 10.84 15.92 10.84C16.52 10.84 17 11.32 17 11.92V14.92C17 15.52 16.52 16 15.92 16H22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </div>
-                            <div class="contacts__item-content">
-                                <h3 class="contacts__item-title">Телефон</h3>
-                                <a href="tel:+7XXXXXXXXXX" class="contacts__item-link">+7 (XXX) XXX-XX-XX</a>
-                            </div>
-                        </div>
-                        <div class="contacts__item">
-                            <div class="contacts__item-icon">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4 4H20C21 4 22 5 22 6V18C22 19 21 20 20 20H4C3 20 2 19 2 18V6C2 5 3 4 4 4Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M22 6L12 13L2 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </div>
-                            <div class="contacts__item-content">
-                                <h3 class="contacts__item-title">Email</h3>
-                                <a href="mailto:info@alevit-stroy.ru" class="contacts__item-link">info@alevit-stroy.ru</a>
-                            </div>
-                        </div>
-                        <div class="contacts__item">
-                            <div class="contacts__item-icon">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M21 10C21 17 12 23 12 23C12 23 3 17 3 10C3 7.61305 3.94821 5.32387 5.63604 3.63604C7.32387 1.94821 9.61305 1 12 1C14.3869 1 16.6761 1.94821 18.364 3.63604C20.0518 5.32387 21 7.61305 21 10Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </div>
-                            <div class="contacts__item-content">
-                                <h3 class="contacts__item-title">Адрес</h3>
-                                <p class="contacts__item-text">Белгородская область, Белгородский район, с. Пушкарное-78, ул. Кузнечная, д. 9</p>
-                            </div>
-                        </div>
-                        <div class="contacts__social">
-                            <h3 class="contacts__social-title">Мессенджеры</h3>
-                            <div class="contacts__social-links">
-                                <a href="#" class="contacts__social-link contacts__social-link--whatsapp" aria-label="WhatsApp">
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M17.472 14.382C17.231 14.283 15.243 13.432 14.875 13.305C14.507 13.178 14.273 13.115 14.04 13.385C13.806 13.655 13.011 14.477 12.81 14.699C12.608 14.921 12.406 14.958 12.165 14.859C11.925 14.76 10.876 14.449 9.593 13.305C8.556 12.38 7.83 11.237 7.628 10.967C7.427 10.697 7.593 10.562 7.765 10.395C7.914 10.25 8.084 10.03 8.215 9.85C8.346 9.67 8.409 9.53 8.508 9.33C8.607 9.13 8.545 8.95 8.446 8.8C8.347 8.65 7.496 6.662 7.195 5.87C6.899 5.09 6.6 5.19 6.435 5.18C6.27 5.17 6.08 5.17 5.89 5.17C5.7 5.17 5.445 5.23 5.225 5.48C5.005 5.73 4.405 6.33 4.405 7.63C4.405 8.93 5.305 10.17 5.425 10.35C5.545 10.53 7.183 13.305 9.703 14.5C10.483 14.9 11.063 15.12 11.483 15.27C12.023 15.47 12.503 15.45 12.883 15.38C13.303 15.3 14.333 14.7 14.583 14.05C14.833 13.4 14.833 12.82 14.733 12.68C14.633 12.54 14.473 12.48 14.232 12.38H17.472Z" fill="currentColor"/>
-                                        <path d="M12 0C5.373 0 0 5.373 0 12C0 13.894 0.48 15.67 1.32 17.21L0 24L6.79 22.68C8.33 23.52 10.106 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM12 21.6C10.39 21.6 8.88 21.12 7.6 20.28L7.2 20.04L3.12 21.12L4.2 17.16L3.96 16.76C3.12 15.48 2.64 13.97 2.64 12.36C2.64 6.756 6.756 2.64 12.36 2.64C17.964 2.64 22.08 6.756 22.08 12.36C22.08 17.964 17.964 22.08 12.36 22.08H12Z" fill="currentColor"/>
-                                    </svg>
-                                    <span>WhatsApp</span>
-                                </a>
-                                <a href="#" class="contacts__social-link contacts__social-link--telegram" aria-label="Telegram">
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM17.894 8.221L15.68 17.896C15.68 17.896 15.474 18.5 14.842 18.5C14.21 18.5 13.789 18.105 13.789 18.105L10.842 15.526L9.263 14.105L6.316 11.158C6.316 11.158 5.737 10.579 6.316 10C6.895 9.421 7.474 9.421 7.474 9.421L14.842 13.263L17.789 10.316C17.789 10.316 18.368 9.737 17.789 9.158C17.21 8.579 16.421 8.579 16.421 8.579L8.421 11.526L6.316 10.737C6.316 10.737 5.737 10.368 6.316 9.789C6.895 9.21 7.684 9.21 7.684 9.21L17.684 7.684C17.684 7.684 18.5 7.263 17.894 8.221Z" fill="currentColor"/>
-                                    </svg>
-                                    <span>Telegram</span>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="contacts__info" id="contacts-info">
+                        <!-- Контакты будут загружены динамически из data/contacts.json -->
                     </div>
                     <div class="contacts__map">
                         <div class="contacts__map-placeholder">
