--- a/src/html/partials/about.html
+++ b/src/html/partials/about.html
@@ -33,14 +33,14 @@
                     <div class="about__team-grid">
                         <div class="about__team-member">
                             <div class="about__team-photo">
-                                <img src="logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
+                                <img src="images/logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
                             </div>
                             <h4 class="about__team-name">Руководитель</h4>
                             <p class="about__team-position">Основатель компании</p>
                         </div>
                         <div class="about__team-member">
                             <div class="about__team-photo">
-                                <img src="logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
+                                <img src="images/logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
                             </div>
                             <h4 class="about__team-name">Руководитель</h4>
                             <p class="about__team-position">Директор по строительству</p>
