--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -4,7 +4,7 @@
         <nav class="nav">
             <div class="nav__container">
                 <a href="#" class="nav__logo">
-                    <img src="3.png" alt="АЛЕВИТ СТРОЙ" class="nav__logo-img">
+                    <img src="images/3.png" alt="АЛЕВИТ СТРОЙ" class="nav__logo-img">
                     <span class="nav__logo-text">АЛЕВИТ СТРОЙ</span>
                 </a>
                 <ul class="nav__menu">
