--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,14 +2,14 @@
         <div class="footer__container">
             <div class="footer__content">
                 <div class="footer__logo">
-                    <img src="logo.png" alt="АЛЕВИТ СТРОЙ" class="footer__logo-img">
+                    <img src="images/logo.png" alt="АЛЕВИТ СТРОЙ" class="footer__logo-img">
                 </div>
                 <div class="footer__info">
                     <p class="footer__text">ООО «АЛЕВИТ СТРОЙ»</p>
                     <p class="footer__text">Строительство домов под ключ в Белгородской области</p>
                 </div>
                 <div class="footer__links">
-                    <a href="#" class="footer__link">Политика конфиденциальности</a>
+                    <a href="/privacy.html" class="footer__link">Политика конфиденциальности</a>
                 </div>
             </div>
             <div class="footer__copyright">
