--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://alevit-stroy.ru/">
     <meta property="og:title" content="АЛЕВИТ СТРОЙ - Дома под ключ в Белгороде | Гарантия 5 лет">
     <meta property="og:description" content="Строительство домов под ключ в Белгороде. Опыт 6+ лет, 60+ домов. Фиксированная цена по договору, гарантия 5 лет. Проект бесплатно!">
-    <meta property="og:image" content="https://alevit-stroy.ru/logo.png">
+    <meta property="og:image" content="https://alevit-stroy.ru/images/logo.png">
     <meta property="og:locale" content="ru_RU">
     
     <!-- Twitter -->
@@ -25,8 +25,8 @@
     <link rel="canonical" href="https://alevit-stroy.ru/">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="apple-touch-icon" href="images/logo.png">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -59,7 +59,7 @@
       "@type": "Organization",
       "name": "АЛЕВИТ СТРОЙ",
       "url": "https://alevit-stroy.ru",
-      "logo": "https://alevit-stroy.ru/logo.png",
+      "logo": "https://alevit-stroy.ru/images/logo.png",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+7XXXXXXXXXX",
